feat: example ror first lab

--- a/index.html
+++ b/index.html
@@ -7,5 +7,94 @@
 </head>
 <body>
     <h1>Hello!! KIUKI. 22. 3,4,5...</h1>
+    <h1>Hello!! </h1>
+    <span>dsnfondsiofnhdigndfnfdfs</span>
+    <span>dsnfondsiofnhdigndfnfdfs</span>
+    <span>dsnfondsiofnhdigndfnfdfs</span>
+    <span>dsnfondsiofnhdigndfnfdfs</span>
+    <span>dsnfondsi ofnhdigndfnfdfs</span>
+    <span>dsnfondsio fnhdigndfnfdfs</span>
+    <span>dsnfondsiofnhd igndfnfdfs</span>
+    Lorem <b>ipsum</b> dolor sit <strong>amet consectetur adipisicing</strong> elit. Similique <i>magnam </i> <sup>debitis</sup> <i><b>incidunt</b></i>, <cite>itaque explicabo</cite> ad. Possimus nam libero explicabo quae soluta nihil ipsum error autem dicta minima. Sequi, voluptate odio.
+    1&lt;3
+    1&leq;3
+    1&rarr;3
+    <dl>
+        <dt>IТехе</dt>
+        <dd>Internet-технології</dd>
+        <dt>AK</dt>
+        <dd>Архітектура комп'ютерів</dd>
+    </dl>
+    <ul>
+        <li>КІУКІ-22-1
+            <ul>
+                <li>Іванов</li>
+                <li>Петров</li>
+                <li>Сідоров</li>
+            </ul>
+        </li>
+        <li>КІУКІ-22-2</li>
+        <li>КІУКІ-22-3</li>
+        <li>КІ-04-4
+            <ul>
+                <li>Іващенко</li>
+                <li>Іваненко</li>
+            </ul>
+        </li>
+    </ul>
+    <ul>
+        <li>Іванов</li>
+        <li>Петров</li>
+        <li>Сідоров</li>
+        <li>Іващенко</li>
+    </ul>
+    <ol>
+        <li>Іванов</li>
+        <li>Петров</li>
+        <li value="6">Сідоров</li>
+        <li>Іващенко</li>
+    </ol>
+    <ol type="a" start="2">
+        <li>Іванов</li>
+        <li>Петров</li>
+        <li value="6">Сідоров</li>
+        <li>Іващенко</li>
+    </ol>
+    <select name="stud" id="stud">
+        <option value="Іванов">Іванов</option>
+        <option value="Петров">Петров</option>
+        <option value="Сідоров">Сідоров</option>
+    </select>
+
+    <table border="1">
+        <caption>Успішність студентів</caption>
+        <thead>
+            <tr>
+                <th rowspan="2">FIO</th>
+                <th colspan="2">Score</th>
+            </tr>
+            <tr>
+                <th>AK</th>
+                <th>Internet-технології</th>
+            </tr>
+        </thead>
+        <tbody>
+        <tr>
+            <td>Іванов</td>
+            <th>67</th>
+            <td>78</td>
+        </tr>
+        <tr>
+            <td>Петров</td>
+            <td>89</td>
+            <td>90</td>
+        </tr>
+        <tr>
+            <td>Сідоров</td>
+            <td>35</td>
+            <td>35</td>
+        </tr>
+    </tbody>
+    </table>
 </body>
 </html>
